--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 			</div> -->
 			<div class="cover-overlay"></div>
 		</div>
+		<div class="cover-class cover-bg-2">
 
+		</div>
 	</div>
 
 	<!-- toolbar bottom -->
