--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<div class="page-content-scroll">
 		<div class="cover-class cover-bg-1">
 		</div>
-		<div class="cover-class2 cover-bg-2">
+		<div class="cover-class cover-bg-2">
 		</div>
 	</div>
 
@@ -234,7 +234,6 @@
 										<option value="10">10</option>
 									</select>
 								</div>
-
 				<div class="formTextareaWrap">
 					<label class="field-title contactMessageTextarea" for="Mesej">Ucapan Manis Anda:
 					</label>
@@ -248,23 +247,7 @@
 				<button class="btn btn-primary" onclick="SubForm()">Save changes</button>
 			  </div>
 			</div>
-
-								<div class="formTextareaWrap">
-									<label class="field-title contactMessageTextarea" for="Mesej">Ucapan Manis Anda:
-									</label>
-									<textarea placeholder="Masukkan Ucapan Manis Anda Disini" name="mesej"
-										class="contactTextarea" id="Mesej" required></textarea>
-								</div>
-								<input type="hidden" id="attendance" name="kedatangan" value="Hadir">
-								<input type="hidden" id="relationship" name="hubungan" value="Keluarga">
-							</form>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary" onclick="SubForm()">Save changes</button>
-							</div>
-						</div>
-
-						<div id='rsvpformkenalan' name="rsvpformkenalan" style="display:none">
+			<div id='rsvpformkenalan' name="rsvpformkenalan" style="display:none">
 							<h3 style='text-align: center;'>Hadir (Kenalan)</h3>
 							<form id="myForm">
 								<div class="formFieldWrap">
@@ -315,23 +298,6 @@
 			  </div>
 			</div>
 			</div>
-
-								<div class="formTextareaWrap">
-									<label class="field-title contactMessageTextarea" for="Mesej">Ucapan Manis Anda:
-									</label>
-									<textarea placeholder="Masukkan Ucapan Manis Anda Disini" name="mesej"
-										class="contactTextarea" id="Message"></textarea>
-								</div>
-								<input type="hidden" id="attendance" name="kedatangan" value="Hadir">
-								<input type="hidden" id="relationship" name="hubungan" value="Kenalan">
-							</form>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary" onclick="SubForm()">Save changes</button>
-							</div>
-						</div>
-					</div>
-
 					<div id='rsvpformtidakhadir' name="rsvpformtidakhadir" style="display:none">
 						<h3 style='text-align: center;'>Tidak Hadir</h3>
 						<f orm id="myForm">
@@ -365,17 +331,9 @@
 								<button type="button" class="btn btn-primary" onclick="SubForm()">Save changes</button>
 							</div>
 					</div>
-				</div>
-				<input type="hidden" id="attendance" name="kehadiran" value=" Tidak Hadir">
-				<input type="hidden" id="relationship" name="hubungan" value="-">
-				<input type="hidden" id="relationship" name="jumlahkedatangan" value="-">
-				<input type="hidden" id="relationship" name="waktu" value="-">
-			</form>
-			<div class="modal-footer">
-				<button class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button class="btn btn-primary" onclick="SubForm()">Save changes</button>
-			  </div>
-			</div>
+				
+				
+			
 		</div>
 		
 	  </div>
