--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<div class="page-content-scroll">
 		<div class="cover-class cover-bg-1">
 		</div>
-		<div class="cover-class cover-bg-2">
+		<div class="cover-class2 cover-bg-2">
 		</div>
 	</div>
 
