--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
 		</div>
 	  </div>
 	</div>
+	</div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -427,7 +428,7 @@ $("#kedatangan").change(function(){
       $("#jumlahkedatanganform").show();
 	  $("#hubunganform").show();
 	  $("#mesejform").show();
-	  $("#waktuform").hide();
+	  $("#waktuform").show();
 
     }else if($(this).val() == 2) {
 		$("#mesejform").show();
