--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ $("#kedatangan").change(function(){
       $("#jumlahkedatanganform").show();
 	  $("#hubunganform").show();
 	  $("#mesejform").show();
-	  $("#waktuform").show();
+	  $("#waktuform").hide();
 
     }else if($(this).val() == 2) {
 		$("#mesejform").show();
