--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</div>
 		<div class="cover-class2 cover-bg-2">
 		</div>
-		<div class="timer-countdown">
+		<div class="timer-countdown cover-class">
 			<div class="outside">
 				<div class="inside" style="text-align: center;"> 
 					<br><br><br><h2>Countdown</h2>
