--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<div class="timer-countdown cover-class3">
 			<div class="outside">
 				<div class="inside" style="text-align: center;"> 
-					<br><br><br><h2>Countdown</h2>
+					<br><h2>Countdown</h2>
 					<div id="timer" style="padding-top: 5px; padding-bottom: 100px; background-color: white; text-align: center;"></div></div>
 			  </div>
 				
