wada commit up gambar baru

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		</div>
 		<div class="cover-class2 cover-bg-2">
 		</div>
+		<div class="cover-class cover-bg-3">
+		</div>
 		<div class="timer-countdown cover-class3">
 			<div class="outside">
 				<div class="inside" style="text-align: center;">
@@ -108,7 +110,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="ModalRSVPTitle">Sila RSVP Kehadiran Anda</h5>
+					<h5 class="modal-title" id="ModalRSVPTitle">Sila Respon...</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -189,8 +191,7 @@
 								class="contactTextarea" id="mesej" required></textarea>
 						</div>
 						<div class="modal-footer">
-							<button class="btn btn-secondary" data-dismiss="modal">Close</button>
-							<button class="btn btn-primary" type="submit">Save changes</button>
+							<button class="btn btn-primary" type="submit">Hantar</button>
 						</div>
 					</form>
 					<div id="form_alert"></div>
