--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="outside">
 				<div class="inside" style="text-align: center;">
 					<br>
-					<h2>Countdown</h2>
+					<h3>Menghitung Hari</h3>
 					<div id="timer"
 						style="padding-top: 2px; padding-bottom: 100px; background-color: white; text-align: center;">
 					</div>
