--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<style amp-custom>
 
-	</style>
 
 	<script>
 		function formButtonhadir() {
@@ -55,17 +53,22 @@
 		</div>
 		<div class="cover-class2 cover-bg-2">
 		</div>
-
+		<div class="col-md-12">
+			<h3 class="hari">Menghitung Hari</h3>
+		</div>
 		<div class="timer-countdown cover-class3">
+
+
 			<div class="outside">
 				<div class="inside" style="text-align: center;">
 					<br>
-					<h3>Menghitung Hari</h3>
-					<div id="timer"
-						style="padding-top: 2px; padding-bottom: 100px; background-color: white; text-align: center;">
+					<h3></h3>
+					<div class="timer-style" id="timer">
+
 					</div>
 				</div>
 			</div>
+
 
 			<br><br><br><br><br>
 
