--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<script async src="https://cdn.ampproject.org/v0.js"></script>
-
+	<title>WalimatulUrus Hanis | Ashyraf</title>
 	<!--AMP HTML files require a canonical link pointing to the regular HTML. If no HTML version exists, it should point to itself.-->
 	<link rel="canonical" href="index.html">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -54,7 +54,7 @@
 		<div class="cover-class2 cover-bg-2">
 		</div>
 		<div class="col-md-12">
-			<h3 class="hari">Menghitung Hari</h3>
+			<h3 class="hari pt-5">Menghitung Hari</h3>
 		</div>
 		<div class="timer-countdown cover-class3">
 
